Demo highways romania vector tiles

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="<%= BASE_URL %>favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="<%= BASE_URL %>favicon-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>180x180.png" />
+    <meta name="msapplication-TileImage" content="<%= BASE_URL %>favicon-270x270.png" />
+    <link rel="stylesheet" href="https://cdn.skypack.dev/maplibre-gl/dist/mapbox-gl.css" />
+    <title>Highways Romania Vector Tiles</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Highways Romania Vector Tiles doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
